--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import "components/composition.scss";
 @import "components/email-form.scss";
 
+@import "modules/_sprite.scss";
 
 @import "layout/grid.scss";
 @import "layout/header.scss";
