--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,16 +2,16 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../assets/images/sprites/sprite-e4336ce2.svg');
+      background-image: url('../../../assets/images/sprites/sprite-e4336ce2.svg');
     }
 
     .no-svg .icon {
-     background-image: url('../../assets/images/sprites/sprite-e4336ce2.png');
+     background-image: url('../../../assets/images/sprites/sprite-e4336ce2.png');
     }
 
 
   .icon--angle-down {
-    width: 32.2px;
-    height: 51.4px;
+    width: 322px;
+    height: 514px;
     background-position: 0 0;
   }
