add body preload pause on animations until page load and update angle down icon animation

--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -58,6 +58,13 @@ li {
     background-color: #fff;
   }
 
+  .preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
+
 
 
 
