--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -76,7 +76,7 @@
 //   }
 }
 
-footer a.pin {
+.icon--angle-down {
   -webkit-animation: bounce 2s infinite;
           animation: bounce 2s infinite;
 }
@@ -124,6 +124,8 @@ animation-iteration-count: 1;
 // 80% {opacity:1;}
 // 100% {opacity:1;width:90%;}
 // }
+
+
 
 
 
