update header intro animation

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -9,8 +9,8 @@
 }
 
 @font-face {
-  font-family: 'Roboto Condensed, Lato';
-  src: url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed|Lato);
+  font-family: 'Roboto Condensed';
+  src: url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed);
 }
 
 
