--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -17,15 +17,16 @@
       font-size: inherit;
       color: inherit;
       background: none;
-      cursor: pointer;
-      padding: 0rem 2rem 4rem 2rem;
+      cursor: pointer !important;
+      padding: 1.7rem 2rem 4rem 2rem !important;
       display: inline-block;
       margin: 15px 30px;
-      text-transform: uppercase;
+      text-transform: uppercase !important;
       letter-spacing: 1px;
-      font-family: 'Roboto', sans-serif;
-      font-size: 1.3rem;
-      font-weight: 700;
+      font-family: 'Roboto Condensed', sans-serif !important;
+      text-transform: uppercase;
+      font-size: 1.3rem !important;
+      font-weight: 700 !important;
       outline: none;
       position: relative;
       -webkit-transition: all 0.3s;
