center header tagline and add hover animation and add google fonts link to index.html

--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -34,11 +34,25 @@
   // }
 }
 
-.main-headline {
+.tagline {
   position: absolute;
-  left: 10%;
-  top: 15%;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  text-align: center;
+}
+.main-headline {
+  // text-align: center;
+  //padding: 10rem 0 0 30rem;
+  // position: absolute;
+  // left: 50%;
+  // top: 15%;
+  // transform: translate(-50%, -50%);
+}
+
+.main-headline:hover {
+  animation: rubberBand 1s;
 }
 
 .composition {
