--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -8,10 +8,10 @@
   src: url(https://fonts.googleapis.com/css?family=Playfair+Display:400,900);
 }
 
-@font-face {
-  font-family: 'Roboto Condensed';
-  src: url(https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed);
-}
+// @font-face {
+//   font-family: 'Roboto Condensed';
+//   src: url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
+// }
 
 
 
