--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -23,7 +23,7 @@
       margin: 15px 30px;
       text-transform: uppercase !important;
       letter-spacing: 1px;
-      font-family: 'Roboto Condensed', sans-serif !important;
+      font-family: 'Roboto', sans-serif !important;
       text-transform: uppercase;
       font-size: 1.3rem !important;
       font-weight: 700 !important;
