add background video to about section and adjust text color

--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -6,7 +6,7 @@
     padding: 3.25rem 8rem;
     border-top: 1px solid #ddd;
     z-index: 2;
-    background: #fff;
+    background-color: transparent !important;
     margin-top: -1px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 
