--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import "components/navigation.scss";
 @import "components/composition.scss";
 @import "components/email-form.scss";
+@import "components/bg-video.scss";
 
 @import "modules/_sprite.scss";
 
