--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -81,7 +81,7 @@ h1 {
     margin-left: auto;
     padding-left: 0;
     padding-right: 0;
-    color: #666;
+    color: #fff;
     font-size: 1.75rem;
     padding-bottom: 1.25rem;
   }
@@ -89,7 +89,7 @@ h1 {
 
   h3.cta {
     font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
-    color: #333;
+    color: #fff;
     font-weight: 300;
     letter-spacing: -0.035em;
     text-rendering: optimizelegibility;
