--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -7,6 +7,7 @@
 
   .button-bar {
       height: 5rem;
+      color: #fff;
   }
 
 
@@ -15,12 +16,12 @@
       border: none;
       font-family: inherit;
       font-size: inherit;
-      color: inherit;
+      color: #fff;
       background: none;
       cursor: pointer !important;
-      padding: 1.7rem 2rem 4rem 2rem !important;
+      padding: 1.7rem 2.2rem 4rem 2.2rem !important;
       display: inline-block;
-      margin: 15px 30px;
+      margin: 0px 0px;
       text-transform: uppercase !important;
       letter-spacing: 1px;
       font-family: 'Roboto', sans-serif !important;
@@ -47,5 +48,5 @@
 .button-bar button.button-bar-toggle-btn-active,
 .button-bar button.button-bar-sort-btn-active {
 	color: #0e83cd;
-    background: #fff;
+    background: #333;
 }
