--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -2,10 +2,10 @@
 
 
 .container {
-  padding: 0 0;
-  margin: 0 0;
+  padding: 0 0 !important;
+  margin: 0 0 !important;
   max-width: $grid-width;
-  margin: 0 auto;
+  //margin: 0 auto;
 
     @include respond(phone) {
       max-width: 100%;
@@ -83,6 +83,7 @@
   .col-1-of-3 {
       //width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
       width: 33.333333%;
+      
 
       @include respond(phone) {
         display: block;
