--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -8,10 +8,10 @@
   src: url(https://fonts.googleapis.com/css?family=Playfair+Display:400,900);
 }
 
-// @font-face {
-//   font-family: 'Roboto Condensed';
-//   src: url(https://fonts.googleapis.com/css?family=Roboto+Condensed);
-// }
+@font-face {
+  font-family: 'BrandonText-Medium';
+  src: url('../../../temp/fonts/BrandonText-Medium.OTF');
+}
 
 
 
@@ -52,9 +52,10 @@
 
 
 
-nav ul {
+.navigation__item {
   font-size: 1.25rem;
-  font-family: 'Brandon Med', Arial, sans-serif;
+  font-family: 'BrandonText-Medium', Arial, sans-serif;
+  font-weight: 700;
   //font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
 }
 
@@ -118,6 +119,21 @@ h1 {
       font-size: 8vw;
 
     }
+  }
+
+  .projects {
+    margin: 0 auto;
+    padding-left: 6.5rem;
+  }
+
+  h5 {
+    letter-spacing: 1px;
+    font-family: 'Roboto', sans-serif !important;
+    text-transform: uppercase;
+    font-size: 1.3rem !important;
+    font-weight: 700 !important;
+    color: white !important;
+    text-align: center
   }
 
   .surf {
