--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -4,7 +4,7 @@
     position: relative;
     text-align: center;
     padding: 3.25rem 8rem;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #333;
     z-index: 2;
     background-color: transparent !important;
     margin-top: -1px;
