implement new grid.scss from natours

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -6,7 +6,8 @@
   -o-animation: dboxRainbow 30s ease infinite;
   animation: dboxRainbow 30s ease infinite;
   -webkit-font-smoothing: subpixel-antialiased;
-  padding: 10rem 0;
+  width: 100%;
+  padding: 0 0;
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
