--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -1,6 +1,7 @@
-.box1 {
+#box1 {
     display: flex;
     flex: 1;
+    float: none !important;
     background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
     background-size: 1200% 1200%;
     -webkit-animation: dboxRainbow 30s ease infinite;
