--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -1,122 +1,69 @@
-/* Container Grid Setup Here */
+.row {
+  //max-width: $grid-width;
+  max-width: 100%;
+  padding: 0 0;
+  margin: 0 auto;
 
-
-.container {
-  padding: 0 0 !important;
-  margin: 0 0 !important;
-  max-width: $grid-width;
-  //margin: 0 auto;
-
-    @include respond(phone) {
-      max-width: 100%;
-    }
-
-    @include respond(phone-bs-override) {
-      min-width: 100%;
-    }
-
-
-  // &:not(:last-child) {    
+  // &:not(:last-child) {
   //     margin-bottom: $gutter-vertical;
 
   //     @include respond(tab-port) {
   //         margin-bottom: $gutter-vertical-small;
   //     }
   // }
-
-  @include respond(tab-land) {
-      max-width: 100%;
-  }
-
-  @include respond(tab-port-bs-override) {
-    min-width: 100%;
-  }
-
-  @include respond(desktop) {
-    max-width: 100%;
-  }
-
-  @include respond(mid-desktop) {
-    max-width: 100%;
-  }
-
-  @include respond(hires-desktop) {
-    max-width: 100%;
-  }
-
-
-  @include respond(big-desktop) {
-    max-width: 100%;
+  
+  @include respond(tab-port) {
+      max-width: 50rem;
+      padding: 0 3rem;
   }
 
   @include clearfix;
 
   [class^="col-"] {
       float: left;
-      
+
+      // &:not(:last-child) {
+      //     margin-right: $gutter-horizontal;
+
+      //     @include respond(tab-port) {
+      //         margin-right: 0;
+      //         margin-bottom: $gutter-vertical-small;
+      //     }
+      // }
+
+      // @include respond(tab-port) {
+      //     width: 100% !important;
+      // }
   }
-  //     &:not(:last-child) {
-  //         margin-right: $gutter-horizontal;
-
-  //         @include respond(tab-port) {
-  //             margin-right: 0;
-  //             margin-bottom: $gutter-vertical-small;
-  //         }
-  //     }
-
-  //     @include respond(tab-port) {
-  //         width: 100% !important;
-  //     }
-  // }
-
-  .col-1-of-1 {
-    //width: calc((100% - #{$gutter-horizontal}) / 2);
-    width: 100%;
-    
-}
 
   .col-1-of-2 {
       //width: calc((100% - #{$gutter-horizontal}) / 2);
-      width: 50%;
+      width: calc(100% / 2);
   }
 
   .col-1-of-3 {
       //width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
-      width: 33.333333%;
-      
+      width: calc(100% / 3);
 
-      @include respond(phone) {
-        display: block;
-        float: left;
-        width: 100%;
-      }
   }
 
   .col-2-of-3 {
-      // width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3));
-      width: 66.6666667%;
-
-      @include respond(phone) {
-        display: block;
-        float: left;
-        width: 100%;
-      }
+      //width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
   }
 
   .col-1-of-4 {
-      width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+      //width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
 
   .col-2-of-4 {
-      width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+     // width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
   }
 
   .col-3-of-4 {
-      width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+      //width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
   }
 
 }
-
 
 
   .box {
