clean up button bar and footer

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -124,6 +124,9 @@ h1 {
   .projects {
     margin: 0 auto;
     padding-left: 6.5rem;
+    height: 6rem;
+    padding-top: 2rem;
+    border-top: 1px solid #777;
   }
 
   h5 {
