--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -6,9 +6,10 @@
   }
 
   .button-bar {
-      height: 10rem;
+      height: 6rem;
       color: #fff;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid #777;
+      border-top: 1px solid #777;
   }
 
 
