--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -6,10 +6,11 @@
   }
 
   .button-bar {
-      height: 6rem;
+      height: 5rem;
       color: #fff;
-      border-bottom: 1px solid #777;
-      border-top: 1px solid #777;
+      //border-bottom: 1px solid #777;
+      border-top: 1px solid #555;
+
   }
 
 
@@ -21,7 +22,7 @@
       color: #fff;
       background: none;
       cursor: pointer !important;
-      padding: 1.7rem 2.2rem 1rem 2.2rem !important;
+      padding: 1.7rem 2.2rem 1.7rem 2.2rem !important;
       display: inline-block;
       margin: 0px 0px;
       text-transform: uppercase !important;
@@ -35,6 +36,10 @@
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s;
+
+      &:hover {
+        background-color: rgba(63,63,63,0.5);
+    }
   }
   
   button:after {
