--- a/app/assets/styles/components/_project-box.scss
+++ b/app/assets/styles/components/_project-box.scss
@@ -199,7 +199,7 @@
   }
 
   /* Colours for each box */
-.box1 { background:#1abc9c;}
+//.box1 { background:#1abc9c;}
 .box2 { background:#3498db;}
 .box3 { background:#9b59b6;}
 .box4 { background:#34495e;}
