--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -17,7 +17,7 @@
 
   &__logo-box {
       text-align: center;
-      margin-bottom: 8rem;
+      margin-top: 1rem;
 
       @include respond(tab-port) {
           margin-bottom: 6rem;
@@ -33,6 +33,7 @@
       border-top: 1px solid $color-grey-dark;
       padding-top: 2rem;
       padding-left: 4rem;
+      margin-left: 2rem;
       display: inline-block;
 
       @include respond(tab-port) {
@@ -57,7 +58,7 @@
       &:link,
       &:visited {
           color: $color-grey-light-1;
-          background-color: $color-grey-dark-3;
+          //background-color: $color-grey-dark-3;
           text-decoration: none;
           text-transform: uppercase;
           display: inline-block;
@@ -66,7 +67,7 @@
 
       &:hover,
       &:active {
-          color: $color-primary;
+          color: $color-grey-light-1;
           box-shadow: 0 1rem 2rem rgba($color-black, .4);
           transform: rotate(5deg) scale(1.3);
       }
@@ -76,6 +77,8 @@
       border-top: 1px solid $color-grey-dark;
       padding-top: 2rem;
       padding-right: 4rem;
+      display: inline-block;
+      margin-right: 2rem;
       width: 80%;
       float: right;
 
