--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -5,6 +5,7 @@
     text-align: center;
     padding: 3.25rem 8rem;
     border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
     z-index: 2;
     background-color: transparent !important;
     margin-top: -1px;
