--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,11 +2,11 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../../assets/images/sprites/sprite-ecaf0614.svg');
+      background-image: url('../../../assets/images/sprites/sprite-afa41aa4.svg');
     }
 
     .no-svg .icon {
-     background-image: url('../../../assets/images/sprites/sprite-ecaf0614.png');
+     background-image: url('../../../assets/images/sprites/sprite-afa41aa4.png');
     }
 
 
@@ -14,4 +14,22 @@ Instead edit gulp/templates/sprite */
     width: 322px;
     height: 514px;
     background-position: 0 0;
+  }
+
+  .icon--linkedin-in {
+    width: 450px;
+    height: 514px;
+    background-position: 41.70984455958549% 0;
+  }
+
+  .icon--medium {
+    width: 450px;
+    height: 514px;
+    background-position: 100% 0;
+  }
+
+  .icon--twitter {
+    width: 514px;
+    height: 514px;
+    background-position: 0 100%;
   }
