--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -63,17 +63,12 @@
   width: 50%;
 }
 
-.icon {
-  background-size: 6.4rem 6.4rem;
-  background-repeat: no-repeat;
-}
-
 .icon--angle-down {
   position: absolute;
   top: 92%;
-  width: 6.4rem;
-  height: 6.4rem;
-  left: 50%;
+  left: 51.5%;
+  width: 16px;
+  height: 24px;
   transform: translate(-50%, -50%);
 }
 
