--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -69,6 +69,59 @@ p {
   margin: 0 auto;
 }
 
+.icon {
+  background-size: 6rem;
+  width: 22px;
+  height: 24px;
+  background-repeat: no-repeat;
+}
+
+.social-icons {
+	text-align: center;
+}
+
+.social-icons__icon {
+  //background-color: #d59541;
+  display: inline-block;
+  margin: 0 5px 5px 5px !important;
+  width: 72px;
+  height: 72px;
+  position: relative;
+}
+
+@media (min-width: 530px) {
+
+  .social-icons__icon {
+    width: 72px;
+    margin: 0 5px;
+  }
+}
+
+.social-icons__icon .icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+
+// .icon--linked-in {
+//   width: 2.4rem;
+//   height: 2.4rem;
+// }
+
+// .icon--medium {
+//   width: 2.4rem;
+//   height: 2.4rem;
+// }
+
+.icon--twitter {
+  width: 26px;
+  height: 24px;
+}
+
 
 
 
