--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -11,25 +11,25 @@ Instead edit gulp/templates/sprite */
 
 
   .icon--angle-down {
-    width: 322px;
-    height: 514px;
+    /* width: 322px;
+    height: 514px; */
     background-position: 0 0;
   }
 
   .icon--linkedin-in {
-    width: 450px;
-    height: 514px;
+    /* width: 450px;
+    height: 514px; */
     background-position: 41.70984455958549% 0;
   }
 
   .icon--medium {
-    width: 450px;
-    height: 514px;
+    /* width: 450px;
+    height: 514px; */
     background-position: 100% 0;
   }
 
   .icon--twitter {
-    width: 514px;
-    height: 514px;
+    /* width: 514px;
+    height: 514px; */
     background-position: 0 100%;
   }
