--- a/app/assets/styles/components/_email-form.scss
+++ b/app/assets/styles/components/_email-form.scss
@@ -77,12 +77,13 @@
 
 // Button
 .email-button {  
-  background-color: #E74C3C;
+  background-color: #333;
   border: 1px solid #b24c45;
   color:white;
   text-align:center;
+  font-family: 'Lato', sans-serif;
   font-weight:bold;
-  font-size:1.5em;
+  font-size:1.3em;
   letter-spacing:2px;
   text-transform:uppercase;
   padding:.75em .5em;
