--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -32,7 +32,7 @@
   }
 
   &__navigation {
-      border-top: 1px solid $color-grey-dark;
+      border-top: 1px solid $color-white;
       padding-top: 2rem;
       padding-left: 14rem;
       margin-left: 2rem;
@@ -76,7 +76,7 @@
   }
 
   &__copyright {
-      border-top: 1px solid $color-grey-dark;
+      border-top: 1px solid $color-white;
       padding-top: 2rem;
       padding-right: 4rem;
       display: inline-block;
