implement mail icon in footer

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -33,8 +33,7 @@
 
   &__navigation {
       border-top: 1px solid $color-white;
-      padding-top: 2rem;
-      padding-left: 14rem;
+      padding: 2rem 3rem 0 4rem;
       margin-left: 2rem;
       display: inline-block;
 
