--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -78,7 +78,7 @@ p {
 }
 
 .icon {
-  background-size: 60px;
+  background-size: 90px;
   width: 21.5px;
   height: 24px;
   background-repeat: no-repeat;
@@ -88,7 +88,7 @@ p {
 
 .social-icons {
   text-align: center;
-  transform: scale(1.1);
+  transform: scale(1.3);
   position: relative;
   width: 100%;
 }
@@ -123,7 +123,8 @@ p {
 .icon--twitter, 
 .icon--linkedin-in, 
 .icon--medium,
-.icon--github {
+.icon--github,
+.icon--envelope {
   transition: all .2s;
 
   &:hover,
@@ -138,7 +139,7 @@ p {
 }
 
 .icon--github {
-  width: 23px;
+  width: 24px;
   height: 24px; 
 }
 
@@ -147,12 +148,10 @@ p {
   height: 24px;
 }
 
-
-// .icon--medium {
-//   width: 2.4rem;
-//   height: 2.4rem;
-// }
-
+.icon--envelope {
+  width: 24px;
+  height: 24px;
+}
 
 
 
