--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -14,7 +14,6 @@
 }
 
 
-
 .main-headline {
   font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;
   color: white;
@@ -123,7 +122,7 @@ h1 {
 
   .projects {
     margin: 0 auto;
-    padding-left: 6.5rem;
+    width: 100%;
     height: 6rem;
     padding-top: 2rem;
     border-top: 1px solid #777;
