--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,11 +2,11 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../../assets/images/sprites/sprite-fe1468cd.svg');
+      background-image: url('../../../assets/images/sprites/sprite-a7f98f91.svg');
     }
 
     .no-svg .icon {
-     background-image: url('../../../assets/images/sprites/sprite-fe1468cd.png');
+     background-image: url('../../../assets/images/sprites/sprite-a7f98f91.png');
     }
 
 
@@ -16,26 +16,32 @@ Instead edit gulp/templates/sprite */
     background-position: 0 0;
   }
 
+  .icon--envelope {
+    /* width: 514px;
+    height: 514px; */
+    background-position: 24.137931034482758% 0;
+  }
+
   .icon--github {
     /* width: 498px;
     height: 514px; */
-    background-position: 41.70984455958549% 0;
+    background-position: 61.925925925925924% 0;
   }
 
   .icon--linkedin-in {
     /* width: 450px;
     height: 514px; */
-    background-position: 100% 0;
+    background-position: 0 100%;
   }
 
   .icon--medium {
     /* width: 450px;
     height: 514px; */
-    background-position: 0 100%;
+    background-position: 32.18884120171674% 100%;
   }
 
   .icon--twitter {
     /* width: 514px;
     height: 514px; */
-    background-position: 59.523809523809526% 100%;
+    background-position: 100% 0;
   }
