--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -99,15 +99,24 @@ p {
   height: 72px;
   position: relative;
 
+  @include respond(tab-land) {
+  width: 70px;
 }
 
-@media (min-width: 530px) {
-
-  .social-icons__icon {
-    width: 70px;
-    margin: 0 5px;
-  }
+@include respond(ipad-port) {
+  width: 40px;
 }
+
+
+}
+
+// @media (max-width: 530px) {
+
+//   .social-icons__icon {
+//     width: 70px;
+//     margin: 0 5px;
+//   }
+// }
 
 .social-icons__icon .icon {
   display: block;
