--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -13,8 +13,13 @@
   color: $color-grey-light-1;
   padding-bottom: 15rem;
 
-  @include respond(tab-port) {
+
+  @include respond(tab-land) {
       padding: 18rem 0;
+  }
+
+  @include respond(ipad-port) {
+    padding: 35rem 0 18rem 0;
   }
 
   &__logo-box {
@@ -41,6 +46,10 @@
           width: 100%;
           text-align: center;
       }
+      @include respond(ipad-port) {
+        width: 88%;
+        text-align: center;
+    }
   }
 
   &__list {
@@ -52,7 +61,9 @@
 
       &:not(:last-child) {
           margin-right: 1.5rem;
+
       }
+
   }
 
   &__link {
@@ -87,6 +98,11 @@
           width: 100%;
           float: none;
       }
+
+      @include respond(ipad-port) {
+        width: 95%;
+        float: none;
+    }
   }
 }
 
