--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -13,8 +13,8 @@
   // }
   
   @include respond(tab-port) {
-      max-width: 50rem;
-      padding: 0 3rem;
+      //max-width: 50rem;
+      //padding: 0 3rem;
   }
 
   @include clearfix;
