--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -12,9 +12,8 @@
   //     }
   // }
   
-  @include respond(tab-port) {
-      //max-width: 50rem;
-      //padding: 0 3rem;
+  @include respond(phone) {
+    max-width: 100%;
   }
 
   @include clearfix;
@@ -44,6 +43,12 @@
   .col-1-of-3 {
       //width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
       width: calc(100% / 3);
+
+      @include respond(phone) {
+        display: block;
+        float: left;
+        width: 100%;
+      }
 
   }
 
