--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -7,12 +7,11 @@
   animation: dboxRainbow 30s ease infinite;
   -webkit-font-smoothing: subpixel-antialiased;
   background-color: #333;
+  border-top: 1px solid $color-grey-dark-3;
   width: 100%;
-  padding: 10rem 0 0 0;
   font-size: 1.4rem;
   color: $color-grey-light-1;
-  padding-bottom: 15rem;
-
+  padding: 15rem 0;
 
   @include respond(tab-land) {
     padding: 18rem 0;
@@ -20,6 +19,10 @@
 
   @include respond(ipad-port) {
     padding: 35rem 0 18rem 0;
+  }
+
+  @include respond(phone) {
+    padding-top: 30rem;
   }
 
   &__logo-box {
@@ -38,7 +41,7 @@
 
   &__navigation {
       border-top: 1px solid $color-white;
-      padding: 2rem 3rem 0 4rem;
+      padding: 0rem 3rem 0 4rem;
       margin-left: 2rem;
       display: inline-block;
 
