--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -90,7 +90,7 @@ p {
   text-align: center;
   transform: scale(1.3);
   position: relative;
-  padding-top: 4rem;
+  //padding-top: 4rem;
 
   @include respond(small-phone) {
     padding-top: 3rem;
@@ -152,7 +152,7 @@ p {
 }
 
 .icon--github {
-  width: 24px;
+  width: 24.3px;
   height: 24px; 
 }
 
@@ -162,7 +162,7 @@ p {
 }
 
 .icon--envelope {
-  width: 24px;
+  width: 25px;
   height: 24px;
 }
 
