--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -25,6 +25,10 @@
     padding-top: 30rem;
   }
 
+  @include respond(small-phone) {
+    padding-top: 20rem;
+  }
+
   &__logo-box {
       text-align: center;
       margin-top: 1rem;
