--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,11 +2,11 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../../assets/images/sprites/sprite-a7f98f91.svg');
+      background-image: url('../../assets/images/sprites/sprite-a7f98f91.svg');
     }
-
+    
     .no-svg .icon {
-     background-image: url('../../../assets/images/sprites/sprite-a7f98f91.png');
+     background-image: url('../../assets/images/sprites/sprite-a7f98f91.png');
     }
 
 
