adjust relative paths in index.html, and for bckgrd image

--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -14,7 +14,7 @@
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)),
-    url(../../../assets/images/programming.jpg);
+    url(../../assets/images/programming.jpg);
     background-size: cover;
     background-position: center bottom;
     position: relative;
