--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -169,8 +169,9 @@ animation-iteration-count: 1;
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 48%;
-    left: 48%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #333;
   }
 
