--- a/app/assets/styles/components/_composition.scss
+++ b/app/assets/styles/components/_composition.scss
@@ -12,7 +12,7 @@
         @include respond(tab-port) {
             float: left;
             position: relative;
-            width: 33.33333333%;
+            width: 100%;
             box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
         }
 
