--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -12,8 +12,8 @@
     height: 85vh;
     background-image: linear-gradient(
         to right bottom,
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)),
+        rgba($color-grey-dark-3, 0.8),
+        rgba($color-grey-dark, 0.8)),
     url(../../assets/images/programming.jpg);
     background-size: cover;
     background-position: center bottom;
@@ -46,11 +46,12 @@
 
 .tagline {
   position: absolute;
-  top: 20%;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  width: 85%;
   cursor: pointer;
 }
 
