--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -1,70 +1,66 @@
 #button-wrapper {
-    margin: 0 auto;
-    text-align: center;
+  display: none;
+  margin: 0 auto;
+  text-align: center;
+  display: block;
+}
+
+.button-bar {
+  height: 5rem;
+  color: #fff;
+  //border-bottom: 1px solid #777;
+  border-top: 1px solid #555;
+}
+
+/* General button style (reset) */
+button {
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: #fff;
+  background: none;
+  cursor: pointer !important;
+  padding: 1.7rem 2.2rem 1.7rem 2.2rem !important;
+  display: inline-block;
+  margin: 0px 0px;
+  text-transform: uppercase !important;
+  letter-spacing: 1px;
+  font-family: "Roboto", sans-serif !important;
+  text-transform: uppercase;
+  font-size: 1.3rem !important;
+  font-weight: 700 !important;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: rgba(63, 63, 63, 0.5);
+  }
+  &:active {
+    background-color: rgb(36, 36, 35);
+  }
+
+  @include respond(phone) {
     display: block;
-
+    float: left;
+    width: 100%;
   }
+}
 
-  .button-bar {
-      height: 5rem;
-      color: #fff;
-      //border-bottom: 1px solid #777;
-      border-top: 1px solid #555;
+button:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
 
-      
-
-  }
-
-
-  /* General button style (reset) */
-  button {
-      border: none;
-      font-family: inherit;
-      font-size: inherit;
-      color: #fff;
-      background: none;
-      cursor: pointer !important;
-      padding: 1.7rem 2.2rem 1.7rem 2.2rem !important;
-      display: inline-block;
-      margin: 0px 0px;
-      text-transform: uppercase !important;
-      letter-spacing: 1px;
-      font-family: 'Roboto', sans-serif !important;
-      text-transform: uppercase;
-      font-size: 1.3rem !important;
-      font-weight: 700 !important;
-      outline: none;
-      position: relative;
-      -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-      transition: all 0.3s;
-
-    &:hover {
-        background-color: rgba(63,63,63,0.5);
-    }
-    &:active {
-        background-color: rgb(36,36,35);
-    }
-
-    @include respond(phone) {
-        display: block;
-        float: left;
-        width: 100%;
-      }
-  }
-  
-  button:after {
-      content: '';
-      position: absolute;
-      z-index: -1;
-      -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-      transition: all 0.3s;
-  }
-  
 .button-bar button.button-bar-filter-btn-active,
 .button-bar button.button-bar-toggle-btn-active,
 .button-bar button.button-bar-sort-btn-active {
-	color: #0e83cd;
-    background: #333;
+  color: #0e83cd;
+  background: #333;
 }
