--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,42 +2,48 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../assets/images/sprites/sprite-a7f98f91.svg');
+      background-image: url('../../assets/images/sprites/sprite-1ed97516.svg');
     }
     
     .no-svg .icon {
-     background-image: url('../../assets/images/sprites/sprite-a7f98f91.png');
+     background-image: url('../../assets/images/sprites/sprite-1ed97516.png');
     }
 
 
   .icon--angle-down {
     /* width: 322px;
     height: 514px; */
-    background-position: 0 0;
+    background-position: 35.99003735990038% 0;
   }
 
   .icon--envelope {
     /* width: 514px;
     height: 514px; */
-    background-position: 24.137931034482758% 0;
+    background-position: 63.64922206506365% 0;
   }
 
   .icon--github {
     /* width: 498px;
     height: 514px; */
-    background-position: 61.925925925925924% 0;
+    background-position: 0 100%;
+  }
+
+  .icon--heart {
+    /* width: 578px;
+    height: 514px; */
+    background-position: 0 0;
   }
 
   .icon--linkedin-in {
     /* width: 450px;
     height: 514px; */
-    background-position: 0 100%;
+    background-position: 33.69418132611637% 100%;
   }
 
   .icon--medium {
     /* width: 450px;
     height: 514px; */
-    background-position: 32.18884120171674% 100%;
+    background-position: 64.14073071718539% 100%;
   }
 
   .icon--twitter {
