--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -72,25 +72,17 @@
 //   }
   
   p {
-    font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
-    width: auto;
-    max-width: 780px;
-    display: block;
-    text-rendering: optimizelegibility;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0;
-    padding-right: 0;
-    color: #fff;
+    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
-    padding-bottom: 1.25rem;
+    text-align: left;
   }
 
 
   h3.cta {
-    font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
+    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
+    // font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
     color: #fff;
-    font-weight: 300;
+    font-weight: 700;
     letter-spacing: -0.035em;
     text-rendering: optimizelegibility;
     font-size: 4vw;
