--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,115 +1,115 @@
 .footer {
-  background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
-  background-size: 1200% 1200%;
-  -webkit-animation: dboxRainbow 30s ease infinite;
-  -moz-animation: dboxRainbow 30s ease infinite;
-  -o-animation: dboxRainbow 30s ease infinite;
-  animation: dboxRainbow 30s ease infinite;
-  -webkit-font-smoothing: subpixel-antialiased;
-  background-color: #333;
-  border-top: 1px solid $color-grey-dark-3;
-  width: 100%;
-  font-size: 1.4rem;
-  color: $color-grey-light-1;
-  padding: 17rem 0;
-
-  @include respond(tab-land) {
-    padding: 18rem 0;
-  }
-
-  @include respond(ipad-port) {
-    padding: 35rem 0 18rem 0;
-  }
-
-  @include respond(phone) {
-    padding-top: 30rem;
-  }
-
-  @include respond(small-phone) {
-    padding-top: 20rem;
-  }
-
-  &__logo-box {
-      text-align: center;
-      margin-top: 1rem;
-
-      @include respond(tab-port) {
-          margin-bottom: 6rem;
-      }
-  }
-
-  &__logo {
-      width: 15rem;
-      height: auto;
-  }
-
-  &__navigation {
-      border-top: 1px solid $color-white;
-      padding: 0rem 3rem 0 4rem;
-      margin-left: 2rem;
-      display: inline-block;
-
-      @include respond(tab-port) {
-          width: 100%;
+    background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
+    background-size: 1200% 1200%;
+    -webkit-animation: dboxRainbow 30s ease infinite;
+    -moz-animation: dboxRainbow 30s ease infinite;
+    -o-animation: dboxRainbow 30s ease infinite;
+    animation: dboxRainbow 30s ease infinite;
+    -webkit-font-smoothing: subpixel-antialiased;
+    background-color: #333;
+    border-top: 1px solid $color-grey-dark-3;
+    width: 100%;
+    font-size: 1.4rem;
+    color: $color-grey-light-1;
+    padding: 17rem 0;
+  
+    @include respond(tab-land) {
+      padding: 18rem 0;
+    }
+  
+    @include respond(ipad-port) {
+      padding: 35rem 0 18rem 0;
+    }
+  
+    @include respond(phone) {
+      padding-top: 30rem;
+    }
+  
+    @include respond(small-phone) {
+      padding-top: 20rem;
+    }
+  
+    &__logo-box {
+        text-align: center;
+        margin-top: 1rem;
+  
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
+    }
+  
+    &__logo {
+        width: 15rem;
+        height: auto;
+    }
+  
+    &__navigation {
+        border-top: 1px solid $color-white;
+        padding: 0rem 3rem 0 4rem;
+        margin-left: 2rem;
+        display: inline-block;
+  
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
+        @include respond(ipad-port) {
+          width: 88%;
           text-align: center;
       }
-      @include respond(ipad-port) {
-        width: 88%;
-        text-align: center;
     }
-  }
-
-  &__list {
-      list-style: none;
-  }
-
-  &__item {
-      display: inline-block;
-
-      &:not(:last-child) {
-          margin-right: 1.5rem;
-
-      }
-
-  }
-
-  &__link {
-      &:link,
-      &:visited {
-          color: $color-grey-light-1;
-          //background-color: $color-grey-dark-3;
-          text-decoration: none;
-          text-transform: uppercase;
-          display: inline-block;
-          transition: all .2s;
-      }
-
-      &:hover,
-      &:active {
-          color: $color-grey-light-1;
-          box-shadow: 0 1rem 2rem rgba($color-black, .4);
-          transform: rotate(5deg) scale(1.3);
-      }
-  }
-
-  &__copyright {
-      border-top: 1px solid $color-white;
-      padding-top: 2rem;
-      padding-right: 4rem;
-      display: inline-block;
-      margin-right: 2rem;
-      width: 80%;
-      float: right;
-
-      @include respond(tab-port) {
-          width: 100%;
+  
+    &__list {
+        list-style: none;
+    }
+  
+    &__item {
+        display: inline-block;
+  
+        &:not(:last-child) {
+            margin-right: 1.5rem;
+  
+        }
+  
+    }
+  
+    &__link {
+        &:link,
+        &:visited {
+            color: $color-grey-light-1;
+            //background-color: $color-grey-dark-3;
+            text-decoration: none;
+            text-transform: uppercase;
+            display: inline-block;
+            transition: all .2s;
+        }
+  
+        &:hover,
+        &:active {
+            color: $color-grey-light-1;
+            box-shadow: 0 1rem 2rem rgba($color-black, .4);
+            transform: rotate(5deg) scale(1.3);
+        }
+    }
+  
+    &__copyright {
+        border-top: 1px solid $color-white;
+        padding-top: .75rem;
+        padding-right: 4rem;
+        display: inline-block;
+        margin-right: 2rem;
+        width: 80%;
+        float: right;
+  
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
+  
+        @include respond(ipad-port) {
+          width: 95%;
           float: none;
       }
-
-      @include respond(ipad-port) {
-        width: 95%;
-        float: none;
     }
   }
-}
-
+  
