--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -77,11 +77,11 @@
         &:link,
         &:visited {
             color: $color-grey-light-1;
-            //background-color: $color-grey-dark-3;
             text-decoration: none;
             text-transform: uppercase;
             display: inline-block;
             transition: all .2s;
+            cursor: pointer;
         }
   
         &:hover,
@@ -89,6 +89,7 @@
             color: $color-grey-light-1;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
             transform: rotate(5deg) scale(1.3);
+            background-color: $color-grey-dark-3;
         }
     }
   
