--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -8,7 +8,7 @@
       rgba($color-grey-dark-3, 0.8),
       rgba($color-grey-dark, 0.8)
     ),
-    url(../../assets/images/programming.jpg);
+    url(../../assets/images/cctv.jpg);
   background-size: cover;
   background-position: center bottom;
   position: relative;
@@ -48,17 +48,6 @@
   cursor: pointer;
 }
 
-.spinner {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-  z-index: 1000;
-}
-
 .composition {
   position: absolute;
   top: 20%;
@@ -72,7 +61,8 @@
   position: absolute;
   top: 90%;
   left: 49.5%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(.6);
+  display: inline-block;
 }
 
 .hero-btn {
