--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -150,6 +150,7 @@
     font-family: 'Roboto', sans-serif !important;
     text-transform: uppercase;
     padding-top: .3rem;
+    padding-left: .8rem;
     font-size: 1.3rem !important;
     font-weight: 700 !important;
     color: white !important;
